Fix pub/private key handling
Upgrade to latest bouncy which resolves some module issues.
Use bouncycastle via the java.security framework rather
than direct.
Base ECPoint off of the public key.
PrivateKey signer needs no ECPoint.

Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/sawtooth-daml-rpc/pom.xml
+++ b/sawtooth-daml-rpc/pom.xml
@@ -139,9 +139,9 @@
 
     <!-- JCE -->
     <dependency>
-        <groupId>bouncycastle</groupId>
-        <artifactId>bouncycastle-jce-jdk13</artifactId>
-        <version>112</version>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk15on</artifactId>
+      <version>1.64</version>
     </dependency>
 
     <!-- Hyperledger Sawtooth -->
