--- a/sawtooth-daml-rpc/pom.xml
+++ b/sawtooth-daml-rpc/pom.xml
@@ -49,6 +49,19 @@
             <manifest>
               <addClasspath>true</addClasspath>
               <classpathPrefix>lib/</classpathPrefix>
+              <mainClass>com.blockchaintp.sawtooth.daml.rpc.JwtGenerator</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>lib/</classpathPrefix>
               <mainClass>com.blockchaintp.sawtooth.daml.rpc.SawtoothDamlRpc</mainClass>
             </manifest>
           </archive>
