Set postgres to use host_auth trust
Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/docker/compose/daml-local.yaml
+++ b/docker/compose/daml-local.yaml
@@ -44,6 +44,8 @@ services:
   postgres:
     image: postgres
     container_name: postgres
+    environment:
+      - POSTGRES_HOST_AUTH_METHOD=trust
 
   settings-tp:
     image: hyperledger/sawtooth-settings-tp:1.1
