--- a/sawtooth-daml-tp/pom.xml
+++ b/sawtooth-daml-tp/pom.xml
@@ -83,6 +83,11 @@
 
     <!-- DAML -->
 
+    <!-- Google -->
+    <dependency>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java-util</artifactId>
+    </dependency>
 
     <!-- Hyperledger Sawtooth -->
 
