--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,11 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+default_language_version:
+    # force all unspecified python hooks to run python3
+    python: python3
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.4.0
+  rev: v3.1.0
   hooks:
     - id: trailing-whitespace
     - id: end-of-file-fixer
@@ -14,7 +17,7 @@ repos:
     - id: detect-private-key
     - id: mixed-line-ending
 - repo: https://github.com/jumanjihouse/pre-commit-hooks
-  rev: 1.11.2
+  rev: 2.1.3
   hooks:
     - id: markdownlint
     - id: shellcheck
