--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,12 +4,18 @@ default_language_version:
     # force all unspecified python hooks to run python3
     python: python3
 repos:
+- repo: https://github.com/gherynos/pre-commit-java
+  rev: v0.1.0  # Use the ref you want to point at
+  hooks:
+    - id: checkstyle
+      args:
+        - -c
+        - build-tools/src/main/resources/checkstyle.xml
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v3.1.0
   hooks:
     - id: trailing-whitespace
     - id: end-of-file-fixer
-      #    - id: check-yaml
     - id: check-added-large-files
     - id: check-json
     - id: check-merge-conflict
