--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
   rev: v0.1.0  # Use the ref you want to point at
   hooks:
     - id: checkstyle
+      exclude: ".*/src/test/*"
       args:
         - -c
         - build-tools/src/main/resources/checkstyle.xml
