--- a/sawtooth-daml-rpc/pom.xml
+++ b/sawtooth-daml-rpc/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>daml-on-sawtooth</groupId>
     <artifactId>daml-on-sawtooth</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.3.0-SNAPSHOT</version>
   </parent>
   <artifactId>sawtooth-daml-rpc</artifactId>
   <name>sawtooth-daml-rpc</name>
@@ -62,7 +62,7 @@
             <manifest>
               <addClasspath>true</addClasspath>
               <classpathPrefix>lib/</classpathPrefix>
-              <mainClass>com.blockchaintp.sawtooth.daml.rpc.SawtoothDamlRpc</mainClass>
+              <mainClass>com.blockchaintp.sawtooth.daml.rpc.Main</mainClass>
             </manifest>
           </archive>
         </configuration>
@@ -88,8 +88,12 @@
       <artifactId>slf4j-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-jdk14</artifactId>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j18-impl</artifactId>
     </dependency>
     <dependency>
       <groupId>io.reactivex.rxjava2</groupId>
@@ -120,12 +124,16 @@
 
     <!-- DAML -->
     <dependency>
-      <groupId>com.digitalasset.ledger</groupId>
+      <groupId>com.daml</groupId>
       <artifactId>ledger-api-auth_${scala.lang.version}</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.daml</groupId>
+      <artifactId>participant-state-kvutils-app_${scala.lang.version}</artifactId>
     </dependency>
     <!-- Required for the index server -->
     <dependency>
-      <groupId>com.digitalasset.platform</groupId>
+      <groupId>com.daml</groupId>
       <artifactId>sandbox_${scala.lang.version}</artifactId>
     </dependency>
 
