ci(pre-commit): fix shfmt whitespce params
Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,6 +31,9 @@ repos:
     - id: script-must-have-extension
     - id: script-must-not-have-extension
     - id: shfmt
+      args:
+        - -i
+        - "2"
 - repo: https://github.com/Lucas-C/pre-commit-hooks
   rev: v1.1.7
   hooks:
