ci(codeowners): update codeowners to replace individuals from btp with blockchaintp/btp-engineering
Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-* @scealiontach @camembertelectrique @dajmaki @mziolekda @dasormeter
+* @blockchaintp/btp-engineering @dajmaki @mziolekda @dasormeter
