--- a/daml-on-sawtooth-protobufs/pom.xml
+++ b/daml-on-sawtooth-protobufs/pom.xml
@@ -62,7 +62,7 @@
             </goals>
             <configuration>
               <sources>
-                <source>target/generated-sources/protobuf/java</source>
+                <source>${project.build.directory}target/generated-sources/protobuf/java</source>
               </sources>
             </configuration>
           </execution>
