ci: convert to use Makefile based build
Also add sonar analysis and report on unit tests

Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/sawtooth-daml-common/pom.xml
+++ b/sawtooth-daml-common/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>daml-on-sawtooth</groupId>
     <artifactId>daml-on-sawtooth</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>${revision}</version>
   </parent>
   <artifactId>sawtooth-daml-common</artifactId>
   <name>sawtooth-daml-common</name>
