--- a/build-tools/pom.xml
+++ b/build-tools/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>daml-on-sawtooth</groupId>
     <artifactId>daml-on-sawtooth</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>${revision}</version>
   </parent>
   <artifactId>build-tools</artifactId>
   <name>build-tools</name>
