--- a/pom.xml
+++ b/pom.xml
@@ -18,18 +18,10 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>daml-on-sawtooth</groupId>
   <artifactId>daml-on-sawtooth</artifactId>
-  <version>1.3.0-SNAPSHOT</version>
+  <version>${revision}</version>
   <name>DAML on Sawtooth</name>
   <packaging>pom</packaging>
   <description>Implementation of DAML SDK with a Sawtooth backend</description>
-  <modules>
-    <module>daml-on-sawtooth-protobufs</module>
-    <module>timekeeper</module>
-    <module>sawtooth-daml-tp</module>
-    <module>sawtooth-daml-rpc</module>
-    <module>sawtooth-daml-common</module>
-    <module>build-tools</module>
-  </modules>
   <profiles>
     <profile>
       <id>default</id>
@@ -86,6 +78,29 @@
       <properties></properties>
     </profile>
   </profiles>
+
+  <distributionManagement>
+    <repository>
+      <uniqueVersion>false</uniqueVersion>
+      <id>releases</id>
+      <layout>default</layout>
+    </repository>
+    <snapshotRepository>
+      <uniqueVersion>true</uniqueVersion>
+      <id>snapshots</id>
+      <layout>default</layout>
+    </snapshotRepository>
+  </distributionManagement>
+
+  <modules>
+    <module>daml-on-sawtooth-protobufs</module>
+    <module>timekeeper</module>
+    <module>sawtooth-daml-tp</module>
+    <module>sawtooth-daml-rpc</module>
+    <module>sawtooth-daml-common</module>
+    <module>build-tools</module>
+  </modules>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <protobuf.version>3.10.0</protobuf.version>
