--- a/sawtooth-daml-rpc/pom.xml
+++ b/sawtooth-daml-rpc/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>daml-on-sawtooth</groupId>
     <artifactId>daml-on-sawtooth</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>${revision}</version>
   </parent>
   <artifactId>sawtooth-daml-rpc</artifactId>
   <name>sawtooth-daml-rpc</name>
