--- a/sawtooth-daml-tp/pom.xml
+++ b/sawtooth-daml-tp/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>daml-on-sawtooth</groupId>
     <artifactId>daml-on-sawtooth</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>${revision}</version>
   </parent>
   <artifactId>sawtooth-daml-tp</artifactId>
   <name>sawtooth-daml-tp</name>
