--- a/sawtooth-daml-rpc/pom.xml
+++ b/sawtooth-daml-rpc/pom.xml
@@ -88,28 +88,14 @@
       <artifactId>slf4j-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j18-impl</artifactId>
-    </dependency>
-    <dependency>
       <groupId>io.reactivex.rxjava2</groupId>
       <artifactId>rxjava</artifactId>
       <version>2.2.8</version>
     </dependency>
     <dependency>
-      <groupId>com.github.scopt</groupId>
-      <artifactId>scopt_2.12</artifactId>
-      <version>3.7.1</version>
-    </dependency>
-
-    <!-- Java Spark -->
-    <dependency>
-      <groupId>com.sparkjava</groupId>
-      <artifactId>spark-core</artifactId>
+      <groupId>org.reactivestreams</groupId>
+      <artifactId>reactive-streams</artifactId>
+      <version>1.0.2</version>
     </dependency>
 
     <!-- Unit testing -->
@@ -125,23 +111,51 @@
     <!-- DAML -->
     <dependency>
       <groupId>com.daml</groupId>
-      <artifactId>ledger-api-auth_${scala.lang.version}</artifactId>
+      <artifactId>participant-state-kvutils-app_${scala.lang.version}</artifactId>
     </dependency>
     <dependency>
       <groupId>com.daml</groupId>
-      <artifactId>participant-state-kvutils-app_${scala.lang.version}</artifactId>
+      <artifactId>participant-state-kvutils_${scala.lang.version}</artifactId>
     </dependency>
-    <!-- Required for the index server -->
+    <dependency>
+      <groupId>com.daml</groupId>
+      <artifactId>participant-state-index_${scala.lang.version}</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.daml</groupId>
+      <artifactId>participant-state_${scala.lang.version}</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.daml</groupId>
+      <artifactId>ledger-api-domain_${scala.lang.version}</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.daml</groupId>
+      <artifactId>ledger-api-health_${scala.lang.version}</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.daml</groupId>
+      <artifactId>bindings-scala_${scala.lang.version}</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.daml</groupId>
+      <artifactId>ledger-api-scalapb_${scala.lang.version}</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.daml</groupId>
+      <artifactId>contextualized-logging_${scala.lang.version}</artifactId>
+    </dependency>
     <dependency>
       <groupId>com.daml</groupId>
       <artifactId>sandbox_${scala.lang.version}</artifactId>
     </dependency>
-
-    <!-- Apache Commons -->
     <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>3.9</version>
+      <groupId>com.typesafe.akka</groupId>
+      <artifactId>akka-actor_${scala.lang.version}</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.typesafe.akka</groupId>
+      <artifactId>akka-stream_${scala.lang.version}</artifactId>
     </dependency>
 
     <!--JSON -->
@@ -151,32 +165,47 @@
       <version>20190722</version>
     </dependency>
 
-    <dependency>
+    <!-- <dependency>
       <groupId>com.googlecode.json-simple</groupId>
       <artifactId>json-simple</artifactId>
       <version>1.1.1</version>
-    </dependency>
+    </dependency> -->
 
     <!-- JWT dependencies -->
-    <dependency>
+    <!-- <dependency>
       <groupId>com.auth0</groupId>
       <artifactId>java-jwt</artifactId>
       <version>3.8.3</version>
-    </dependency>
+    </dependency> -->
 
     <!-- JCE -->
-    <dependency>
+    <!-- <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcprov-jdk15on</artifactId>
-      <version>1.64</version>
-    </dependency>
+      <version>1.68</version>
+    </dependency> -->
 
+    <!-- <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk15on</artifactId>
+      <version>1.68</version>
+    </dependency> -->
     <!-- Hyperledger Sawtooth -->
-
-    <!-- Apache Commons -->
     <dependency>
-      <groupId>commons-cli</groupId>
-      <artifactId>commons-cli</artifactId>
+      <groupId>org.hyperledger.sawtooth</groupId>
+      <artifactId>sawtooth-sdk-protos</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.zeromq</groupId>
+      <artifactId>jeromq</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
     </dependency>
 
     <!-- BTP -->
@@ -185,6 +214,16 @@
       <artifactId>sawtooth-daml-common</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+    <dependency>
+      <groupId>daml-on-sawtooth</groupId>
+      <artifactId>daml-on-sawtooth-protobufs</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hyperledger.sawtooth</groupId>
+      <artifactId>sawtooth-sdk-transaction-processor</artifactId>
+    </dependency>
+
 
   </dependencies>
 </project>
