--- a/sawtooth-daml-tp/pom.xml
+++ b/sawtooth-daml-tp/pom.xml
@@ -68,14 +68,6 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j18-impl</artifactId>
-    </dependency>
     <!-- Unit testing -->
     <dependency>
       <groupId>junit</groupId>
@@ -87,15 +79,22 @@
     </dependency>
 
     <!-- DAML -->
+    <dependency>
+      <groupId>com.daml</groupId>
+      <artifactId>daml-lf-data_${scala.lang.version}</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.daml</groupId>
+      <artifactId>participant-state-kvutils_${scala.lang.version}</artifactId>
+    </dependency>
 
 
     <!-- Hyperledger Sawtooth -->
-
-    <!-- Apache Commons -->
     <dependency>
-      <groupId>commons-cli</groupId>
-      <artifactId>commons-cli</artifactId>
+      <groupId>org.hyperledger.sawtooth</groupId>
+      <artifactId>sawtooth-sdk-transaction-processor</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.javatuples</groupId>
       <artifactId>javatuples</artifactId>
@@ -106,12 +105,20 @@
       <groupId>com.google.protobuf</groupId>
       <artifactId>protobuf-java-util</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java</artifactId>
+    </dependency>
 
     <!-- BTP -->
     <dependency>
       <groupId>daml-on-sawtooth</groupId>
       <artifactId>sawtooth-daml-common</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>daml-on-sawtooth</groupId>
+      <artifactId>daml-on-sawtooth-protobufs</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
   </dependencies>
