--- a/timekeeper/pom.xml
+++ b/timekeeper/pom.xml
@@ -72,36 +72,36 @@
       <artifactId>slf4j-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j18-impl</artifactId>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java-util</artifactId>
     </dependency>
     <dependency>
       <groupId>com.google.protobuf</groupId>
-      <artifactId>protobuf-java-util</artifactId>
+      <artifactId>protobuf-java</artifactId>
     </dependency>
     <!-- Unit testing -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-    </dependency>
     <!-- Hyperledger Sawtooth -->
     <dependency>
       <groupId>org.hyperledger.sawtooth</groupId>
       <artifactId>sawtooth-sdk-transaction-processor</artifactId>
     </dependency>
-    <!-- Apache Commons -->
     <dependency>
-      <groupId>commons-cli</groupId>
-      <artifactId>commons-cli</artifactId>
+      <groupId>org.hyperledger.sawtooth</groupId>
+      <artifactId>sawtooth-sdk-protos</artifactId>
     </dependency>
     <!-- BTP -->
     <dependency>
       <groupId>daml-on-sawtooth</groupId>
       <artifactId>sawtooth-daml-common</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>daml-on-sawtooth</groupId>
+      <artifactId>daml-on-sawtooth-protobufs</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
   </dependencies>
