--- a/sawtooth-daml-tp/pom.xml
+++ b/sawtooth-daml-tp/pom.xml
@@ -87,6 +87,11 @@
       <groupId>com.daml</groupId>
       <artifactId>participant-state-kvutils_${scala.lang.version}</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>${scala.lang.version}.10</version>
+    </dependency>
 
 
     <!-- Hyperledger Sawtooth -->
