--- a/sawtooth-daml-rpc/pom.xml
+++ b/sawtooth-daml-rpc/pom.xml
@@ -220,6 +220,11 @@
       <version>${project.parent.version}</version>
     </dependency>
     <dependency>
+      <groupId>daml-on-sawtooth</groupId>
+      <artifactId>timekeeper</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.hyperledger.sawtooth</groupId>
       <artifactId>sawtooth-sdk-transaction-processor</artifactId>
     </dependency>
