refactor(sawtooth-daml-common): isolate MTTTransactionProcessr
Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
     <module>sawtooth-daml-tp</module>
     <module>sawtooth-daml-rpc</module>
     <module>sawtooth-daml-common</module>
+    <module>sawtooth-mttp</module>
     <module>build-tools</module>
   </modules>
 
